rnsc/test_data/integration/error/parser/type_hints/fieldref/trailing_token_recovers.rns
.class @fieldref MyClass fieldName Ljava/io/PrintStream; trailing
